--- a/i3/config
+++ b/i3/config
@@ -193,11 +193,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
+#===== Polybar ========
+exec_always --no-startup-id polybar
+#======================
 
 #===== Picom ==========
 exec picom -b --config ~/.config/piconf/picom.conf
