--- a/i3/config
+++ b/i3/config
@@ -59,7 +59,7 @@ default_floating_border pixel 0
 #=====================================================
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -198,6 +198,6 @@ exec_always --no-startup-id polybar
 #======================
 
 #===== Picom ==========
-exec picom -b --config ~/.config/piconf/picom.conf
+#exec picom -b --config ~/.config/piconf/picom.conf
 #=====================
 for_window [class="^.*"] border pixel 0 
